<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rspitaliere.starwarscharacters.fragments.InfoCharactersFragment">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/character_info"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_height_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/height"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        tools:text="@string/height" />

                    <TextView
                        android:id="@+id/info_height"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_mass_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/mass"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_mass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_hair_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/hair"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_hair"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_skin_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/skin"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_skin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_eye_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/eye"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_eye"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_birth_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/birth"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_birth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_gender_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/gender"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_gender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <TextView
                    android:id="@+id/info_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/movies"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textSize="14sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/info_recycler_view_movies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_time_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/captured"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_lat_long_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/latlong"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/info_lat_long"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="@color/gray_info"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>
