<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/gray">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/line_poster"
                android:layout_width="100dp"
                android:layout_height="184dp"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/line_poster"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/line_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/line_director_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/director"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp" />

                    <TextView
                        android:id="@+id/line_director"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="TextView"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/line_producer_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/producer"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp" />

                    <TextView
                        android:id="@+id/line_producer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="TextView"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/line_release_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/release"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp" />

                    <TextView
                        android:id="@+id/line_release"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="TextView"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="8sp" />

                </LinearLayout>


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>